--- a/.environment
+++ b/.environment
@@ -1,22 +1,22 @@
 [ Main settings ]
 ; Possible DATABASE_DRIVER: 'mysql', 'pgsql', 'dblib'.
 ; Please use 'dblib' for Microsoft SQL Server
-DATABASE_DRIVER = mysql
+DATABASE_DRIVER = postgres
 DATABASE_ENCODING = utf8
 SAMPLE_DATA_LENGTH = 100
 
 [ Primary connection params ]
 DATABASE_HOST = localhost
 DATABASE_PORT = 3306
-DATABASE_NAME = compalex_dev
-DATABASE_USER = login
-DATABASE_PASSWORD = password
-DATABASE_DESCRIPTION = Developer database
+DATABASE_NAME = mb
+DATABASE_USER = webuser
+DATABASE_PASSWORD = craughwell
+DATABASE_DESCRIPTION = Live database
 
 [ Secondary connection params ]
-DATABASE_HOST_SECONDARY = localhost
+DATABASE_HOST_SECONDARY = 149.155.131.154
 DATABASE_PORT_SECONDARY = 3306
-DATABASE_NAME_SECONDARY = compalex_prod
-DATABASE_USER_SECONDARY = login
-DATABASE_PASSWORD_SECONDARY = password
-DATABASE_DESCRIPTION_SECONDARY = Production database
+DATABASE_NAME_SECONDARY = mb
+DATABASE_USER_SECONDARY = webuser
+DATABASE_PASSWORD_SECONDARY = craughwell
+DATABASE_DESCRIPTION_SECONDARY = Development database
