--- a/.environment
+++ b/.environment
@@ -1,12 +1,12 @@
 [ Main settings ]
 ; Possible DATABASE_DRIVER: 'mysql', 'pgsql', 'dblib'.
 ; Please use 'dblib' for Microsoft SQL Server
-DATABASE_DRIVER = postgres
+DATABASE_DRIVER = pgsql
 DATABASE_ENCODING = utf8
 SAMPLE_DATA_LENGTH = 100
 
 [ Primary connection params ]
-DATABASE_HOST = localhost
+DATABASE_HOST = 149.155.131.154
 DATABASE_PORT = 3306
 DATABASE_NAME = mb
 DATABASE_USER = webuser
